# dyt-cuda

./: LICENSE  README.md  benchmark.py  pretrain.py  pyproject.toml  requirements.txt  setup.py
benchmarking/: __init__.py  dyt_wav2vec.py  engine.py
csrc/: bindings.cpp  dyt.h  kernels.cu
dyt/: __init__.py  functional.py  modules.py
results/: dyt-backward-feature-scaling.csv  dyt-backward-n-scaling.csv  dyt-performance-feature-scaling.csv  dyt-performance-n-scaling.csv
src/: __init__.py  bindings.cpp  function.py  kernels.cu  kernels.py  torch.py
