[build-system]
requires = ["setuptools", "wheel", "ninja", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "dyt_cuda"
version = "0.1.0"
description = "CUDA kernels for DyT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = ".git,__pycache__,docs/source/conf.py,old,build,dist,venv"